// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SUPERVISES_INTEGRATION_RELATIONSHIP_CONFIGS golden snapshots entityanalytics_entra_id: targets-per-actor ES|QL is locked (no watermark) 1`] = `
"SET unmapped_fields=\\"nullify\\";
FROM entities-latest-__namespace__
| WHERE (entity.relationships.supervises.raw_identifiers.user.email IS NOT NULL OR entity.relationships.supervises.raw_identifiers.user.id IS NOT NULL OR entity.relationships.supervises.raw_identifiers.user.name IS NOT NULL)
    AND entity.source IN (\\"entityanalytics_entra_id\\", \\"entityanalytics_entra_id.user\\")
| EVAL actorUserId = entity.id
| EVAL rawTargetKey = CASE(entity.relationships.supervises.raw_identifiers.user.email IS NULL, entity.relationships.supervises.raw_identifiers.user.id, entity.relationships.supervises.raw_identifiers.user.id IS NULL, entity.relationships.supervises.raw_identifiers.user.email, MV_APPEND(entity.relationships.supervises.raw_identifiers.user.email, entity.relationships.supervises.raw_identifiers.user.id))
| EVAL rawTargetKey = CASE(entity.relationships.supervises.raw_identifiers.user.name IS NULL, rawTargetKey, rawTargetKey IS NULL, entity.relationships.supervises.raw_identifiers.user.name, MV_APPEND(rawTargetKey, entity.relationships.supervises.raw_identifiers.user.name))
| MV_EXPAND rawTargetKey
| EVAL targetEntityId = CONCAT(\\"user:\\", rawTargetKey, \\"@entra_id\\")
| WHERE COALESCE(targetEntityId, \\"\\") != \\"\\"
    AND targetEntityId != \\"user:@entra_id\\"
    AND targetEntityId RLIKE \\".+:.+@.+\\"
| STATS supervises = VALUES(targetEntityId) BY actorUserId
| WHERE COALESCE(actorUserId, \\"\\") != \\"\\"
| LIMIT 3500"
`;

exports[`SUPERVISES_INTEGRATION_RELATIONSHIP_CONFIGS golden snapshots entityanalytics_entra_id: targets-per-actor ES|QL with watermark is locked 1`] = `
"FROM entities-latest-__namespace__
| WHERE (entity.relationships.supervises.raw_identifiers.user.email IS NOT NULL OR entity.relationships.supervises.raw_identifiers.user.id IS NOT NULL OR entity.relationships.supervises.raw_identifiers.user.name IS NOT NULL)
    AND entity.source IN (\\"entityanalytics_entra_id\\", \\"entityanalytics_entra_id.user\\")
    AND entity.lifecycle.last_seen > \\"2026-06-01T00:00:00.000Z\\"
| EVAL actorUserId = entity.id
| EVAL rawTargetKey = CASE(entity.relationships.supervises.raw_identifiers.user.email IS NULL, entity.relationships.supervises.raw_identifiers.user.id, entity.relationships.supervises.raw_identifiers.user.id IS NULL, entity.relationships.supervises.raw_identifiers.user.email, MV_APPEND(entity.relationships.supervises.raw_identifiers.user.email, entity.relationships.supervises.raw_identifiers.user.id))
| EVAL rawTargetKey = CASE(entity.relationships.supervises.raw_identifiers.user.name IS NULL, rawTargetKey, rawTargetKey IS NULL, entity.relationships.supervises.raw_identifiers.user.name, MV_APPEND(rawTargetKey, entity.relationships.supervises.raw_identifiers.user.name))
| MV_EXPAND rawTargetKey
| EVAL targetEntityId = CONCAT(\\"user:\\", rawTargetKey, \\"@entra_id\\")
| WHERE COALESCE(targetEntityId, \\"\\") != \\"\\"
    AND targetEntityId != \\"user:@entra_id\\"
    AND targetEntityId RLIKE \\".+:.+@.+\\"
| STATS supervises = VALUES(targetEntityId) BY actorUserId
| WHERE COALESCE(actorUserId, \\"\\") != \\"\\"
| LIMIT 3500"
`;

exports[`SUPERVISES_INTEGRATION_RELATIONSHIP_CONFIGS golden snapshots entityanalytics_okta: targets-per-actor ES|QL is locked (no watermark) 1`] = `
"SET unmapped_fields=\\"nullify\\";
FROM entities-latest-__namespace__
| WHERE (entity.relationships.supervises.raw_identifiers.user.email IS NOT NULL OR entity.relationships.supervises.raw_identifiers.user.id IS NOT NULL OR entity.relationships.supervises.raw_identifiers.user.name IS NOT NULL)
    AND entity.source IN (\\"entityanalytics_okta\\", \\"entityanalytics_okta.user\\")
| EVAL actorUserId = entity.id
| EVAL rawTargetKey = CASE(entity.relationships.supervises.raw_identifiers.user.email IS NULL, entity.relationships.supervises.raw_identifiers.user.id, entity.relationships.supervises.raw_identifiers.user.id IS NULL, entity.relationships.supervises.raw_identifiers.user.email, MV_APPEND(entity.relationships.supervises.raw_identifiers.user.email, entity.relationships.supervises.raw_identifiers.user.id))
| EVAL rawTargetKey = CASE(entity.relationships.supervises.raw_identifiers.user.name IS NULL, rawTargetKey, rawTargetKey IS NULL, entity.relationships.supervises.raw_identifiers.user.name, MV_APPEND(rawTargetKey, entity.relationships.supervises.raw_identifiers.user.name))
| MV_EXPAND rawTargetKey
| EVAL targetEntityId = CONCAT(\\"user:\\", rawTargetKey, \\"@okta\\")
| WHERE COALESCE(targetEntityId, \\"\\") != \\"\\"
    AND targetEntityId != \\"user:@okta\\"
    AND targetEntityId RLIKE \\".+:.+@.+\\"
| STATS supervises = VALUES(targetEntityId) BY actorUserId
| WHERE COALESCE(actorUserId, \\"\\") != \\"\\"
| LIMIT 3500"
`;

exports[`SUPERVISES_INTEGRATION_RELATIONSHIP_CONFIGS golden snapshots entityanalytics_okta: targets-per-actor ES|QL with watermark is locked 1`] = `
"FROM entities-latest-__namespace__
| WHERE (entity.relationships.supervises.raw_identifiers.user.email IS NOT NULL OR entity.relationships.supervises.raw_identifiers.user.id IS NOT NULL OR entity.relationships.supervises.raw_identifiers.user.name IS NOT NULL)
    AND entity.source IN (\\"entityanalytics_okta\\", \\"entityanalytics_okta.user\\")
    AND entity.lifecycle.last_seen > \\"2026-06-01T00:00:00.000Z\\"
| EVAL actorUserId = entity.id
| EVAL rawTargetKey = CASE(entity.relationships.supervises.raw_identifiers.user.email IS NULL, entity.relationships.supervises.raw_identifiers.user.id, entity.relationships.supervises.raw_identifiers.user.id IS NULL, entity.relationships.supervises.raw_identifiers.user.email, MV_APPEND(entity.relationships.supervises.raw_identifiers.user.email, entity.relationships.supervises.raw_identifiers.user.id))
| EVAL rawTargetKey = CASE(entity.relationships.supervises.raw_identifiers.user.name IS NULL, rawTargetKey, rawTargetKey IS NULL, entity.relationships.supervises.raw_identifiers.user.name, MV_APPEND(rawTargetKey, entity.relationships.supervises.raw_identifiers.user.name))
| MV_EXPAND rawTargetKey
| EVAL targetEntityId = CONCAT(\\"user:\\", rawTargetKey, \\"@okta\\")
| WHERE COALESCE(targetEntityId, \\"\\") != \\"\\"
    AND targetEntityId != \\"user:@okta\\"
    AND targetEntityId RLIKE \\".+:.+@.+\\"
| STATS supervises = VALUES(targetEntityId) BY actorUserId
| WHERE COALESCE(actorUserId, \\"\\") != \\"\\"
| LIMIT 3500"
`;

exports[`SUPERVISES_INTEGRATION_RELATIONSHIP_CONFIGS golden snapshots workday: targets-per-actor ES|QL is locked (no watermark) 1`] = `
"SET unmapped_fields=\\"nullify\\";
FROM logs-workday.user-__namespace__
| WHERE (workday.user.Manager_Email IS NOT NULL OR workday.user.Manager_ID IS NOT NULL)
| EVAL _src_entity_namespace0 = MV_FIRST(TO_STRING(event.module)),
 _src_entity_namespace1 = MV_FIRST(SPLIT(MV_FIRST(TO_STRING(data_stream.dataset)), \\".\\")),
 _src_entity_namespace = COALESCE(CASE(_src_entity_namespace0 IS NOT NULL AND _src_entity_namespace0 != \\"\\", _src_entity_namespace0), CASE(_src_entity_namespace1 IS NOT NULL AND _src_entity_namespace1 != \\"\\", _src_entity_namespace1)),
 _eval_entity_namespace_arm0 = (TO_STRING(user.name) IS NOT NULL AND TO_STRING(user.name) != \\"\\" AND TO_STRING(host.id) IS NOT NULL AND TO_STRING(host.id) != \\"\\" AND NOT (TO_STRING(user.name) IN (\\"root\\", \\"bin\\", \\"daemon\\", \\"sys\\", \\"nobody\\", \\"jenkins\\", \\"ansible\\", \\"deploy\\", \\"terraform\\", \\"gitlab-runner\\", \\"postgres\\", \\"mysql\\", \\"redis\\", \\"elasticsearch\\", \\"kafka\\", \\"admin\\", \\"operator\\", \\"service\\"))),
 _eval_entity_namespace_arm1 = (MV_CONTAINS(TO_STRING(event.kind), \\"asset\\") AND MV_CONTAINS(TO_STRING(event.module), \\"asset_discovery\\")),
 entity.namespace = COALESCE(CASE(COALESCE(_eval_entity_namespace_arm0, FALSE), \\"local\\"), CASE(COALESCE(_eval_entity_namespace_arm1, FALSE), CASE(MV_FIRST(TO_STRING(cloud.provider)) == \\"aws\\", \\"aws\\", MV_FIRST(TO_STRING(cloud.provider)) == \\"gcp\\", \\"gcp\\", MV_FIRST(TO_STRING(cloud.provider)) == \\"azure\\", \\"entra_id\\")), CASE(COALESCE(_src_entity_namespace IN (\\"okta\\", \\"entityanalytics_okta\\"), FALSE), \\"okta\\"), CASE(COALESCE(_src_entity_namespace IN (\\"azure\\", \\"entityanalytics_entra_id\\"), FALSE), \\"entra_id\\"), CASE(COALESCE(_src_entity_namespace IN (\\"o365\\", \\"o365_metrics\\"), FALSE), \\"microsoft_365\\"), CASE(COALESCE(_src_entity_namespace IN (\\"entityanalytics_ad\\"), FALSE), \\"active_directory\\"), CASE(COALESCE(_src_entity_namespace IN (\\"workday\\"), FALSE), \\"workday\\"), CASE(_src_entity_namespace IS NULL OR _src_entity_namespace == \\"\\", \\"unknown\\"), _src_entity_namespace),
 user_name_present = TO_STRING(user.name) IS NOT NULL AND TO_STRING(user.name) != \\"\\",
 host_id_present = TO_STRING(host.id) IS NOT NULL AND TO_STRING(host.id) != \\"\\",
 entity_namespace_present = TO_STRING(entity.namespace) IS NOT NULL AND TO_STRING(entity.namespace) != \\"\\",
 user_email_present = TO_STRING(user.email) IS NOT NULL AND TO_STRING(user.email) != \\"\\",
 user_id_present = TO_STRING(user.id) IS NOT NULL AND TO_STRING(user.id) != \\"\\",
 user_domain_present = TO_STRING(user.domain) IS NOT NULL AND TO_STRING(user.domain) != \\"\\",
 user_name_present_or_null = CASE(user_name_present, TO_STRING(user.name)),
 host_id_present_or_null = CASE(host_id_present, TO_STRING(host.id)),
 entity_namespace_present_or_null = CASE(entity_namespace_present, TO_STRING(entity.namespace)),
 user_email_present_or_null = CASE(user_email_present, TO_STRING(user.email)),
 user_id_present_or_null = CASE(user_id_present, TO_STRING(user.id)),
 user_domain_present_or_null = CASE(user_domain_present, TO_STRING(user.domain)),
 _euid_branch_0_formula = CONCAT(user_name_present_or_null, \\"@\\", host_id_present_or_null, \\"@\\", entity_namespace_present_or_null),
 _euid_branch_0_cond = (TO_STRING(entity.namespace) == \\"local\\"),
 _euid_branch_1_formula = COALESCE(CONCAT(user_email_present_or_null, \\"@\\", entity_namespace_present_or_null), CONCAT(user_id_present_or_null, \\"@\\", entity_namespace_present_or_null), CONCAT(user_name_present_or_null, \\"@\\", user_domain_present_or_null, \\"@\\", entity_namespace_present_or_null), CONCAT(user_name_present_or_null, \\"@\\", entity_namespace_present_or_null)),
 targetEntityId = CONCAT(\\"user:\\", CASE(_euid_branch_0_cond, _euid_branch_0_formula,
TRUE, _euid_branch_1_formula, NULL))
| EVAL managerKey = CASE(workday.user.Manager_Email IS NULL, workday.user.Manager_ID, workday.user.Manager_ID IS NULL, workday.user.Manager_Email, MV_APPEND(workday.user.Manager_Email, workday.user.Manager_ID))
| MV_EXPAND managerKey
| EVAL actorUserId = CONCAT(\\"user:\\", managerKey, \\"@workday\\")
| WHERE COALESCE(actorUserId, \\"\\") != \\"\\"
    AND actorUserId != \\"user:@workday\\"
    AND actorUserId RLIKE \\".+:.+@.+\\"
    AND COALESCE(targetEntityId, \\"\\") != \\"\\"
| STATS supervises = VALUES(targetEntityId) BY actorUserId
| LIMIT 3500"
`;

exports[`SUPERVISES_INTEGRATION_RELATIONSHIP_CONFIGS golden snapshots workday: targets-per-actor ES|QL with watermark is locked 1`] = `
"FROM logs-workday.user-__namespace__
| WHERE (workday.user.Manager_Email IS NOT NULL OR workday.user.Manager_ID IS NOT NULL)
    AND event.ingested >= NOW() - 30 day
| EVAL _src_entity_namespace0 = MV_FIRST(TO_STRING(event.module)),
 _src_entity_namespace1 = MV_FIRST(SPLIT(MV_FIRST(TO_STRING(data_stream.dataset)), \\".\\")),
 _src_entity_namespace = COALESCE(CASE(_src_entity_namespace0 IS NOT NULL AND _src_entity_namespace0 != \\"\\", _src_entity_namespace0), CASE(_src_entity_namespace1 IS NOT NULL AND _src_entity_namespace1 != \\"\\", _src_entity_namespace1)),
 _eval_entity_namespace_arm0 = (TO_STRING(user.name) IS NOT NULL AND TO_STRING(user.name) != \\"\\" AND TO_STRING(host.id) IS NOT NULL AND TO_STRING(host.id) != \\"\\" AND NOT (TO_STRING(user.name) IN (\\"root\\", \\"bin\\", \\"daemon\\", \\"sys\\", \\"nobody\\", \\"jenkins\\", \\"ansible\\", \\"deploy\\", \\"terraform\\", \\"gitlab-runner\\", \\"postgres\\", \\"mysql\\", \\"redis\\", \\"elasticsearch\\", \\"kafka\\", \\"admin\\", \\"operator\\", \\"service\\"))),
 _eval_entity_namespace_arm1 = (MV_CONTAINS(TO_STRING(event.kind), \\"asset\\") AND MV_CONTAINS(TO_STRING(event.module), \\"asset_discovery\\")),
 entity.namespace = COALESCE(CASE(COALESCE(_eval_entity_namespace_arm0, FALSE), \\"local\\"), CASE(COALESCE(_eval_entity_namespace_arm1, FALSE), CASE(MV_FIRST(TO_STRING(cloud.provider)) == \\"aws\\", \\"aws\\", MV_FIRST(TO_STRING(cloud.provider)) == \\"gcp\\", \\"gcp\\", MV_FIRST(TO_STRING(cloud.provider)) == \\"azure\\", \\"entra_id\\")), CASE(COALESCE(_src_entity_namespace IN (\\"okta\\", \\"entityanalytics_okta\\"), FALSE), \\"okta\\"), CASE(COALESCE(_src_entity_namespace IN (\\"azure\\", \\"entityanalytics_entra_id\\"), FALSE), \\"entra_id\\"), CASE(COALESCE(_src_entity_namespace IN (\\"o365\\", \\"o365_metrics\\"), FALSE), \\"microsoft_365\\"), CASE(COALESCE(_src_entity_namespace IN (\\"entityanalytics_ad\\"), FALSE), \\"active_directory\\"), CASE(COALESCE(_src_entity_namespace IN (\\"workday\\"), FALSE), \\"workday\\"), CASE(_src_entity_namespace IS NULL OR _src_entity_namespace == \\"\\", \\"unknown\\"), _src_entity_namespace),
 user_name_present = TO_STRING(user.name) IS NOT NULL AND TO_STRING(user.name) != \\"\\",
 host_id_present = TO_STRING(host.id) IS NOT NULL AND TO_STRING(host.id) != \\"\\",
 entity_namespace_present = TO_STRING(entity.namespace) IS NOT NULL AND TO_STRING(entity.namespace) != \\"\\",
 user_email_present = TO_STRING(user.email) IS NOT NULL AND TO_STRING(user.email) != \\"\\",
 user_id_present = TO_STRING(user.id) IS NOT NULL AND TO_STRING(user.id) != \\"\\",
 user_domain_present = TO_STRING(user.domain) IS NOT NULL AND TO_STRING(user.domain) != \\"\\",
 user_name_present_or_null = CASE(user_name_present, TO_STRING(user.name)),
 host_id_present_or_null = CASE(host_id_present, TO_STRING(host.id)),
 entity_namespace_present_or_null = CASE(entity_namespace_present, TO_STRING(entity.namespace)),
 user_email_present_or_null = CASE(user_email_present, TO_STRING(user.email)),
 user_id_present_or_null = CASE(user_id_present, TO_STRING(user.id)),
 user_domain_present_or_null = CASE(user_domain_present, TO_STRING(user.domain)),
 _euid_branch_0_formula = CONCAT(user_name_present_or_null, \\"@\\", host_id_present_or_null, \\"@\\", entity_namespace_present_or_null),
 _euid_branch_0_cond = (TO_STRING(entity.namespace) == \\"local\\"),
 _euid_branch_1_formula = COALESCE(CONCAT(user_email_present_or_null, \\"@\\", entity_namespace_present_or_null), CONCAT(user_id_present_or_null, \\"@\\", entity_namespace_present_or_null), CONCAT(user_name_present_or_null, \\"@\\", user_domain_present_or_null, \\"@\\", entity_namespace_present_or_null), CONCAT(user_name_present_or_null, \\"@\\", entity_namespace_present_or_null)),
 targetEntityId = CONCAT(\\"user:\\", CASE(_euid_branch_0_cond, _euid_branch_0_formula,
TRUE, _euid_branch_1_formula, NULL))
| EVAL managerKey = CASE(workday.user.Manager_Email IS NULL, workday.user.Manager_ID, workday.user.Manager_ID IS NULL, workday.user.Manager_Email, MV_APPEND(workday.user.Manager_Email, workday.user.Manager_ID))
| MV_EXPAND managerKey
| EVAL actorUserId = CONCAT(\\"user:\\", managerKey, \\"@workday\\")
| WHERE COALESCE(actorUserId, \\"\\") != \\"\\"
    AND actorUserId != \\"user:@workday\\"
    AND actorUserId RLIKE \\".+:.+@.+\\"
    AND COALESCE(targetEntityId, \\"\\") != \\"\\"
| STATS supervises = VALUES(targetEntityId) BY actorUserId
| LIMIT 3500"
`;
